CHANGES
=======

3.6.2 (unreleased)
------------------

- Add an adapter from ``zope.security.interfaces.IPrincipal`` to
  ``zope.publisher.interfaces.logginginfo.ILoggingInfo``. It was moved
  from ``zope.app.security`` as a part of refactoring process. 

3.6.1 (2009-03-09)
------------------

- Fix: remove IBrowserRequest dependency in http implementation based on
  condition for setDefaultSkin. Use ISkinnable instead of IBrowserRequest.

3.6.0 (2009-03-08)
------------------

- Clean-up: Move skin related code from zope.publisher.interfaces.browser and
  zope.publisher.browser to zope.publihser.interfaces and
  zope.publisher.skinnable and provide BBB imports. See skinnable.txt for more
  information.

- Fix: ensure that we only apply skin interface in setDefaultSkin which also
  provide IBrowserSkinType. This will ensure that we find a skin if the
  applySkin method will lookup for a skin based on this type interface.

- Fix: Make it possible to use adapters and not only interfaces as skins from
  the adapter registry. Right now the defaultSkin directive registers simple
  interfaces as skin adapters which will run into a TypeError if someone tries
  to adapter such a skin adapter. Probably we should change the defaultSkin
  directive and register real adapters instead of using the interfaces as fake
  adapters where we expect adapter factories.

- Feature: allow to use applySkin with different skin types using the optional
  argument skinType which is by default set to IBrowserSkinType

- Feature: implemented the default skin pattern within adapters. This allows
  us to register default skins for other requests then only IBrowserRequest
  using IDefaultSkin adapters.
  
  Note, ISkinnable and ISkinType and the skin implementation should be moved
  out of the browser request modules. Packages like z3c.jsonrpc do not depend
  on IBrowserRequest but they are skinnable.

- Feature: added ISkinnable interface which allows us to implement the apply